[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.29", optional = true }
wasm-bindgen-futures = { version = "0.4.1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.2", features = ["color"], optional = true }
log = "0.4.22"
sauron = "0.61.0"


[features]
default = ["wasm"]
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "console_error_panic_hook",
    "console_log",
]
