[package]
name = "yew-astro"
version = "0.1.0"
authors = ["ğ•¯ğ–Šğ–’ğ–”ğ–“ <78769380+codegod100@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
yew = { version = "0.21.0", features = ["csr"] }
console_log = "1.0.0"
log = "0.4.22"
web-sys = "0.3.76"
wasm-bindgen-futures = "0.4.49"
js-sys = "0.3.76"
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["serde_derive"] }
yewdux = "0.10.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
